try and fix graal build